# allocator

./: Allocator.sln  CMakeLists.txt
Allocator/: Allocator.cpp  Allocator.h  Allocator.vcxproj  Allocator.vcxproj.filters  main.cpp
Allocator/x64/Debug/: Allocator.exe.recipe  Allocator.ilk  allocator.obj.enc  vc143.idb
Allocator/x64/Debug/Allocator.tlog/: Allocator.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Inc/: Allocator.h  AllocatorTest.h  main.h
Src/: Allocator.cpp  AllocatorTest.cpp  main.cpp
